h1. CHANGELOG

h3. 0.4.0 unreleased

* generate tests when RSpec is installed

h3. 0.3.1 May 2, 2014

* add a generator for an 'About' page

h3. 0.3.0 May 1, 2014

* add Devise registrations controller for 'users' and 'authorized' generators

h3. 0.2.0 May 1, 2014

* fixes for 'authorized' generator

h3. 0.1.0 May 1, 2014

* initial release