@@ -3,6 +3,7 @@ h1. CHANGELOG
 h3. 0.4.0 unreleased
 
 * generate tests when RSpec is installed
+* update Users controller to deny access to other users' profiles
 
 h3. 0.3.1 May 2, 2014
 
